--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -29,7 +29,7 @@
 	
 	<input type="button" name="getSQL" value="getSQL" id="getSql" />
 	<input type="button" value="JSON" id="jsonTest" />
-	
+	<input type="button" value="GetIntro" id="getIntro" />
 	
 	
 	<script type="text/javascript" src="js/cordova.js"></script>
