complete college ui and can get data from local database

--- a/assets/www/course.html
+++ b/assets/www/course.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title></title>
         <meta name="viewport" content = "width = device-width, initial-scale = 1, minimum-scale = 1, maximum-scale = 1" />
-        <link rel="stylesheet" href="jquery.mobile-1.1.0.css" />
+        
         <link rel="stylesheet" href="style/index.css" />
 
         <script type="text/javascript" src="js/jquery.js"></script>
@@ -21,8 +21,12 @@
                 <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>课程</h1>
             </div>
 
-            <div data-role="content" id='mainContent'>
-
+            <div data-role="content">
+                <ul id='mainContent4course' data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+  <!--                   <li><a href="#">This is a test1</a></li>
+                    <li><a href="#">This is a test2</a></li> -->
+                </ul>
+                <link rel="stylesheet" href="jquery.mobile-1.1.0.css" />
             </div>
             <div data-role="footer"  data-position="fixed">
                 <div data-role="navbar">
@@ -40,6 +44,7 @@
                 </div>
                 <!-- /navbar -->
             </div>
+            
             <!-- /footer -->
         </div>
 
