update the major.html & ready to get data of major

--- a/assets/www/college.html
+++ b/assets/www/college.html
@@ -16,15 +16,13 @@
     </head>
     <body>
         <div data-role="page" data-title="course" id="course">
-            <script type="text/javascript" src="js/query2.js"></script>
+            <script type="text/javascript" src="js/getCollege.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
                 <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>课程</h1>
             </div>
 
             <div data-role="content">
                 <ul id='mainContent4course' data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-  <!--                   <li><a href="#">This is a test1</a></li>
-                    <li><a href="#">This is a test2</a></li> -->
                 </ul>
                 <link rel="stylesheet" href="jquery.mobile-1.1.0.css" />
             </div>
