--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="ui-block-d">
-                        <a href="course.html" id="index2course"><img src="images/course.png"></a>
+                        <a href="college.html" id="index2course"><img src="images/course.png"></a>
                         <div>
                             课程
                         </div>
