--- a/assets/www/major.html
+++ b/assets/www/major.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <div data-role="page" id="major" data-title="major">
-
+            <script type="text/javascript" src="js/major.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="course.php" data-icon="arrow-l" data-mini="true">返回</a><h1>计算机学院</h1><a href="index.php" data-icon="home" data-mini="true">首页</a>
+                <a href="course.html" data-icon="arrow-l" data-mini="true">返回</a><h1>计算机学院</h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
 
             </div>
             <!-- /header -->
@@ -16,51 +16,8 @@
             <div data-role="content"  data-theme="c">
 
                 <div class="content-primary">
-                    <ul data-role="listview" data-filter="true" data-filter-placeholder="搜索课程名称..." data-filter-theme="d" data-theme="d" data-divider-theme="d" class="ui-listview">
-
-                        <li data-role="list-divider">
-                            计算机科学与技术
-                        </li>
-                        <li>
-                            <a href="#">实用UNIX***</a>
-                        </li>
-                        <li>
-                            <a href="#">数据结构</a>
-                        </li>
-                        <li>
-                            <a href="#">编译原理</a>
-                        </li>
-                        <li>
-                            <a href="#">C语言</a>
-                        </li>
-                        <li>
-                            <a href="#">数据库</a>
-                        </li>
-                        <li>
-                            <a href="#">人工智能</a>
-                        </li>
-
-                        <li data-role="list-divider">
-                            软件工程
-                        </li>
-                        <li>
-                            <a href="#">软件工程</a>
-                        </li>
-
-                        <li data-role="list-divider">
-                            网络工程
-                        </li>
-                        <li>
-                            <a href="#">网络原理</a>
-                        </li>
-
-                        <li data-role="list-divider">
-                            信息与计算科学
-                        </li>
-                        <li>
-                            <a href="#">信息系统</a>
-                        </li>
-
+                    <ul id="majorList" data-role="listview" data-filter="true" data-filter-placeholder="搜索课程名称..." data-filter-theme="d" data-theme="d" data-divider-theme="d" class="ui-listview">
+                        
                     </ul>
                 </div>
 
