ready to add classroom module

--- a/assets/www/major.html
+++ b/assets/www/major.html
@@ -16,7 +16,7 @@
             <div data-role="content"  data-theme="c">
 
                 <div class="content-primary">
-                    <ul id="majorList" data-role="listview" data-filter="true" data-filter-placeholder="搜索课程名称..." data-filter-theme="d" data-theme="d" data-divider-theme="d" class="ui-listview">
+                    <ul id="majorList" data-role="listview" data-inset="true" data-theme="d" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
                         
                     </ul>
                 </div>
