--- a/assets/www/college.html
+++ b/assets/www/college.html
@@ -6,19 +6,12 @@
         <meta name="viewport" content = "width = device-width, initial-scale = 1, minimum-scale = 1, maximum-scale = 1" />
         
         <link rel="stylesheet" href="style/index.css" />
-
-        <script type="text/javascript" src="js/jquery.js"></script>
-
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/cordova.js"></script>
-        <script type="text/javascript" src="js/jquery.mobile-1.1.0.js"></script>
-
     </head>
     <body>
         <div data-role="page" data-title="course" id="course">
             <script type="text/javascript" src="js/getCollege.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>课程</h1>
+                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>学院</h1>
             </div>
 
             <div data-role="content">
