complete the classroom original...

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="ui-block-d">
-                        <a href="classroom.html" id="index2classroom"><img src="images/classroom.png"></a>
+                        <a href="building.html" id="index2classroom"><img src="images/classroom.png"></a>
                         <div>
                             教室
                         </div>
