--- a/assets/www/classroom.html
+++ b/assets/www/classroom.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div data-role="page" id="classroom" data-title="classroom">
-
+            <script type="text/javascript" src="js/getClassroomList.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
                 <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>教室</h1>
 
@@ -14,44 +14,31 @@
             <!-- /header -->
 
             <div data-role="content"  data-theme="c">
-
-                <ul data-role="listview" data-inset="true" data-theme="d"  data-divider-theme="d" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-
-                    <li data-role="list-divider">
-                        小营校区
-                    </li>
-                    <li>
-                        <a href="#">图书馆</a>
-                    </li>
-
-                    <li data-role="list-divider">
-                        健翔桥校区
-                    </li>
-                    <li>
-                        <a href="classroomlist.php">教一楼***</a>
-                    </li>
-                    <li>
-                        <a href="#">教二楼</a>
-                    </li>
-
-                    <li data-role="list-divider">
-                        清河校区
-                    </li>
-                    <li>
-                        <a href="#">教三楼</a>
-                    </li>
-
-                    <li data-role="list-divider">
-                        金台路校区
-                    </li>
-                    <li>
-                        <a href="#">教四楼</a>
-                    </li>
+                <!--  <ul id="classroomList" data-role="listview"
+                data-inset="true"> -->
+                <ul id="classroomList" data-role="listview" data-filter="true" data-filter-placeholder="搜索本楼教室名称..." data-filter-theme="d" data-theme="d" data-divider-theme="d" class="ui-listview">
 
                 </ul>
             </div>
             <!-- /content -->
 
+            <div data-role="footer"  data-position="fixed"  data-theme="c">
+                <div data-role="navbar">
+                    <ul>
+                        <li>
+                            <a onclick="chgContent('info')" class="ui-btn-active">前一天</a>
+                        </li>
+                        <li>
+                            <a>2012年6月1日</a>
+                        </li>
+                        <li>
+                            <a onclick="chgContent('colleges')">后一天</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /navbar -->
+            </div>
+            <!-- /footer -->
         </div>
     </body>
 </html>
