update building and classroom

--- a/assets/www/classroom.html
+++ b/assets/www/classroom.html
@@ -29,14 +29,14 @@
                             <a onclick="chgContent('info')" class="ui-btn-active">前一天</a>
                         </li>
                         <li>
-                            <a>2012年6月1日</a>
+                            <a href="#"><span id="currentDate_classroom">2012年6月1日</span></a>
                         </li>
                         <li>
                             <a onclick="chgContent('colleges')">后一天</a>
                         </li>
                     </ul>
                 </div>
-                <!-- /navbar -->
+                <!-- /  -->
             </div>
             <!-- /footer -->
         </div>
