--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="style/index.css" />
         
         <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/thread.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/cordova.js"></script>
+        <script type="text/javascript" src="js/cordova-1.8.0.js"></script>
         <script type="text/javascript" src="js/base.js"></script> 
         <script type="text/javascript" src="js/jquery.mobile-1.1.0.js"></script>
         
