--- a/assets/www/courselist.html
+++ b/assets/www/courselist.html
@@ -8,7 +8,7 @@
         <div data-role="page" id="courselist" data-title="courselist">
             <script type="text/javascript" src="js/getCourseList.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="major.html" data-icon="arrow-l" data-mini="true">返回</a><h1>计算机学院</h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
+                <a href="major.html" data-icon="arrow-l" data-mini="true">返回</a><h1 id="courseListCollege"></h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
 
             </div>
             <div data-role="content"  data-theme="c">
