--- a/assets/www/classroom.html
+++ b/assets/www/classroom.html
@@ -26,13 +26,13 @@
                 <div data-role="navbar">
                     <ul>
                         <li>
-                            <a onclick="chgContent('info')" class="ui-btn-active">前一天</a>
+                            <a id="classroomGetPre" href="#">前一天</a>
                         </li>
                         <li>
-                            <a href="#"><span id="currentDate_classroom">2012年6月1日</span></a>
+                            <a style="height:100%; width: 100%;" href="#" id="getCurrentDate" class="ui-btn-active"><span id="currentDate_classroom"></span></a>
                         </li>
                         <li>
-                            <a onclick="chgContent('colleges')">后一天</a>
+                            <a id="classroomGetNext" href="#">后一天</a>
                         </li>
                     </ul>
                 </div>
