--- a/assets/www/intro.html
+++ b/assets/www/intro.html
@@ -15,7 +15,11 @@
                 <img src="images/news1.jpg" width="320px">
             </div>
             <div data-role="content" id="displayIntroduce"  data-theme="c">
-               
+
+                <div id="introContent">
+                    <p> 　　北京信息科技大学是由原北京机械工业学院和原北京信息工程学院合并组建，以工管为主体、工管理经文法多学科协调发展，以培养高素质应用型人才为主、北京市重点支持建设的全日制普通高等学校。</p><p> 　　学校秉承“勤以为学，信以立身”的校训，发扬“抢抓机遇、迎难而上、争先创优、挑战自我”的新大学精神，坚持办学指导思想，明确发展目标和办学定位，传承办学优势与特色，紧紧依靠广大师生员工，抓建设、促改革、谋发展，内涵建设与外延发展等各项事业取得显著成效。</p><p> 　　面向未来，学校正以坚定步伐朝着“在电子信息、现代制造与光机电一体化、知识管理与技术经济等领域的优势与特色更加突出，综合办学实力稳居北京市属高校前列，并早日达到国内同类高校的一流水平”的奋斗目标迈进。</p>
+                </div>
+
             </div>
             <!-- /content -->
 
@@ -23,13 +27,13 @@
                 <div data-role="navbar">
                     <ul>
                         <li>
-                            <a href="#" class="ui-btn-active">学校简介</a>
+                            <a id="introToInfo" href="#" class="ui-btn-active">学校简介</a>
                         </li>
                         <li>
-                            <a href="#">历史沿革</a>
+                            <a id="introToHistory" href="#">历史沿革</a>
                         </li>
                         <li>
-                            <a href="#">院系专业</a>
+                            <a id="introToCollege" href="#">院系专业</a>
                         </li>
                     </ul>
                 </div>
@@ -37,7 +41,19 @@
 
             </div>
             <!-- /footer -->
+            <script language="javascript">
+                $("#introToInfo").click(function() {
+                    $("#introContent").html("<p>　　北京信息科技大学是由原北京机械工业学院和原北京信息工程学院合并组建，以工管为主体、工管理经文法多学科协调发展，以培养高素质应用型人才为主、北京市重点支持建设的全日制普通高等学校。</p> <p> 　　学校秉承“勤以为学，信以立身”的校训，发扬“抢抓机遇、迎难而上、争先创优、挑战自我”的新大学精神，坚持办学指导思想，明确发展目标和办学定位，传承办学优势与特色，紧紧依靠广大师生员工，抓建设、促改革、谋发展，内涵建设与外延发展等各项事业取得显著成效。</p> <p> 　　面向未来，学校正以坚定步伐朝着“在电子信息、现代制造与光机电一体化、知识管理与技术经济等领域的优势与特色更加突出，综合办学实力稳居北京市属高校前列，并早日达到国内同类高校的一流水平”的奋斗目标迈进。</p>");
+                });
+                $("#introToHistory").click(function() {
+                    $("#introContent").html("<p> 　　北京机械工业学院的前身是1986年陕西机械学院北京研究生部和北京机械工业管理专科学校合并成立的北京机械工业管理学院，隶属机械工业部，1990年更名为北京机械工业学院，其办学历史可追溯到20世纪30年代，1998年划转北京市管理。 </p><p> 　　北京信息工程学院的前身是1978年第四机械工业部1915所举办的北京大学第二分校，1985年更名为北京信息工程学院，隶属电子工业部，1997年与电子工业管理干部学院、北京成人电子工业学院合并，2000年划转北京市管理。</p> <p> 　　新世纪初，北京市委市政府立足于北京高等教育更好地适应首都经济社会发展需要、为首都机电行业和信息行业培养高素质应用型人才，决定组建北京信息科技大学，于2003年8月21日启动组建工作；教育部于2004年5月18日批准筹建，于2008年3月26日批准正式设立。伴随着新大学成立,学校也加入北京学院路一本大家庭之中,学校发展也随之进入一个新的台阶。</p>");
+                });
+                $("#introToCollege").click(function() {
+                    $("#introContent").html("<p> 　　学校面向全国招生，现有全日制在校生11483人，其中硕士研究生828人、本科生10655人；成教学生3708人。</p><p> 　　学校设有机电工程学院、仪器科学与光电工程学院、信息与通信工程学院、自动化学院、计算机学院、经济管理学院、信息管理学院、政教学院、外国语学院、理学院10个学院和人文社科系、体育部，以及研究生部和继续教育学院等机构。</p> <p> 　　学校现有31个本科专业，覆盖工、管、理、经、文等学科门类，其中国家级特色专业建设点4个、北京市级特色专业建设点9个。 </p><p> 　　学校的研究生教育始于1981年，1993年取得硕士学位授予权。现有一级学科硕士点12个、二级学科硕士点42个，覆盖工、管、理、经、法等5个学科门类。现有工程硕士和工商管理硕士两个专业硕士学位授权种类，专业学位授权领域8个。</p> <p> 　　学校以培养高素质应用型人才为主，更新理念，创新思路，深入开展教学改革、教学建设和教学研究，近五年，取得国家级教育教学成果特等奖1项、一等奖1项、北京市教育教学成果奖14项，其中一等奖4项、二等奖9项、列入国家级规划教材选题17本、市级精品教材16本、市级精品课程9门，出版教材113部。学生在全国及北京市各类学科竞赛中获奖达935人次。2010年6月，学校以本科生为主组成的代表队在新加坡举行的中型机器人足球世界杯赛中战胜以博士生、硕士生和本科生混合编组的上届冠军荷兰爱因霍夫理工大学队取得冠军，为国家争得了荣誉。应届本科毕业生一次就业率保持在95%以上，毕业生受到用人单位好评。</p>");
+                });
 
+            </script>
         </div>
+
     </body>
 </html>
