--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/thread.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/cordova-1.8.0.js"></script>
+        <script type="text/javascript" src="js/cordova-1.9.0.js"></script>
         <script type="text/javascript" src="js/base.js"></script> 
         <script type="text/javascript" src="js/jquery.mobile-1.1.0.js"></script>
         
@@ -110,14 +110,14 @@
                 <div data-role="navbar" data-iconpos="left">
                 	<ul>
                 		<li>
-                			<a href="" data-icon="grid" data-mini="true">学院</a>
+                			<a href="college.html" data-icon="grid" data-mini="true">学院</a>
                 		</li>
-                		<li><a href="" data-icon="home">登录</a></li>
+                		<li><a href="login.html" data-icon="home">登录</a></li>
                 		<li>
-                			<a href="" data-icon="gear">配置</a>
+                			<a href="config.html" data-icon="gear">配置</a>
                 		</li>
                 		<li>
-                			<a href="" data-icon="info">关于</a>
+                			<a href="about.html" data-icon="info">关于</a>
                 		</li>
                 	</ul>
                 </div>
@@ -126,4 +126,22 @@
         </div>
                
     </body>
+    <script type="text/javascript">
+        // clearHistory();
+    </script>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
