--- a/assets/www/map.html
+++ b/assets/www/map.html
@@ -1,30 +1,38 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<head>
-	<meta charset="UTF-8">
-	<title>地图</title>
-</head>
-<body>
-    <div data-role="page" id="map" data-title="map">
-        <div data-role="header" data-position="fixed" data-theme="b">
-            <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>教室</h1>
+    <head>
+        <meta charset="UTF-8">
+        <title></title>
+    </head>
+    <body>
+        <div data-role="page" id="map" data-title="map">
+            <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
+            
+            <div data-role="header" data-position="fixed" data-theme="b">
+                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>地图</h1>
+            </div>
+            <!-- /header -->
+
+            <div data-role="content" data-theme="c" id="mapContainer" style="width:520px;height:340px;border:1px solid gray">
+
+            </div>
+            <div data-role="footer" data-position="fixed" data-theme="c">
+                <div data-role="navbar">
+                    <ul>
+                        <li>
+                            <a onclick="moveMap('xy')" class="ui-btn-active">小营</a>
+                        </li>
+                        <li>
+                            <a onclick="moveMap('jxq')">健翔桥</a>
+                        </li>
+                        <li>
+                            <a onclick="moveMap('qh')">清河</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
-        <div><span class="font17pt inlineBlock textCenter" style="width:100%;">北京信息科技大学校区地图</span></div>
-        <br/>
-    	<div class="fullAuto">
-    	    <label for="img" class="font14pt">小营校区:</label>
-    	    <img class="fullAuto" src="http://api.map.baidu.com/staticimage?width=430&height=400&center=116.352554,40.044008&zoom=17&markers=116.352482,40.045458|116.35568,40.044146&markerStyles=l,0|l,1" alt="Map" />
-    	</div>
-    	<br/>
-    	<div>
-    	    <label for="img" class="font14pt">健翔桥校区:</label>
-    	    <img class="fullAuto" src="http://api.map.baidu.com/staticimage?width=430&height=400&center=116.388836,39.995203&zoom=17&markers=116.38925,39.99577&markerStyles=l,0" alt="Map" />
-        </div>
-    	<br/>
-    	<div>
-    	    <label for="img" class="font14pt">清河校区:</label>
-    	    <img class="fullAuto" src="http://api.map.baidu.com/staticimage?width=430&height=400&center=116.34835,40.049676&zoom=17&markers=116.347541,40.049994&markerStyles=l,0" alt="Map" />
-        </div>
-    </div>
-</body>
+        <script type="text/javascript" src="js/getMap.js"></script>
+    </body>
 </html>
