start news and yellowpage modules.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="ui-block-d">
-                        <a href="yellopage.html" id="index2yellowpage"><img src="images/yellowpage.png"></a>
+                        <a href="yellowpage.html" id="index2yellowpage"><img src="images/yellowpage.png"></a>
                         <div>
                             黄页
                         </div>
