--- a/assets/www/newscategory.html
+++ b/assets/www/newscategory.html
@@ -14,16 +14,16 @@
 			<div data-role="content"  data-theme="c">
 				<ul id="categoryNews" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 					<li>
-						<a href="#">综合新闻</a>
+						<a href="#">1综合新闻</a>
 					</li>
 					<li>
-						<a href="#">基层动态</a>
+						<a href="#">1基层动态</a>
 					</li>
 					<li>
-						<a href="#">教学科研</a>
+						<a href="#">1教学科研</a>
 					</li>
 					<li>
-						<a href="#">校园人物</a>
+						<a href="#">1校园人物</a>
 					</li>
 					<li>
 						<a href="#">媒体关注</a>
