--- a/assets/www/yellowpage.html
+++ b/assets/www/yellowpage.html
@@ -1,10 +1,22 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<head>
-	<meta charset="UTF-8">
-	<title>黄页</title>
-</head>
-<body>
-	
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>黄页</title>
+    </head>
+    <body>
+        <div data-role="page" id="yellowpage" data-title="yellowpage">
+
+            <div data-role="header" data-position="fixed" data-theme="b">
+                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>黄页</h1>
+            </div>
+            <!-- /header -->
+            <div data-role="content" id="yellowPageContent" data-theme="c">
+                <ul data-role="listview" data-filter="true" data-filter-placeholder="搜索部门名称..." data-filter-theme="d" data-theme="d" data-divider-theme="d" class="ui-listview"></ul>
+            
+            </div>
+            <script type="text/javascript" src="js/getYellowPage.js"></script>
+        </div>
+
+    </body>
 </html>
