--- a/assets/www/newscategory.html
+++ b/assets/www/newscategory.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>Category</title>
 	</head>
 	<body>
 		<div data-role="page" id="newscatgory" data-title="newscatgory">
@@ -12,18 +12,18 @@
 			</div><!-- /header -->
 
 			<div data-role="content"  data-theme="c">
-				<ul id="categoryNews" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+				<ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 					<li>
-						<a href="#">1综合新闻</a>
+						<a href="#">综合新闻</a>
 					</li>
 					<li>
-						<a href="#">1基层动态</a>
+						<a href="#">基层动态</a>
 					</li>
 					<li>
-						<a href="#">1教学科研</a>
+						<a href="#">教学科研</a>
 					</li>
 					<li>
-						<a href="#">1校园人物</a>
+						<a href="#">校园人物</a>
 					</li>
 					<li>
 						<a href="#">媒体关注</a>
@@ -49,7 +49,7 @@
 					</ul>
 				</div><!-- /navbar -->
 			</div><!-- /footer -->
-            <script type="text/javascript" src="js/getNewsCategory.js"></script>
+
 		</div>
 	</body>
 </html>
