ready to finish news and yellowpage

--- a/assets/www/news.html
+++ b/assets/www/news.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>news</title>
     </head>
     <body>
         <div data-role="page" id="news" data-title="news">
@@ -16,7 +16,7 @@
             </form>
 
             <div data-role="content"  data-theme="c">
-                <ul data-role="listview" class="ui-listview ui-shadow">
+                <ul data-role="listview" id="latestNews" class="ui-listview ui-shadow">
                     <li>
                         <a href="newsdetail.html">***“2011全国高校辅导员年度人物”评选结果出炉，我校..</a>
                         <p> 2012/04/28 </p>
@@ -75,7 +75,7 @@
                 <!-- /navbar -->
             </div>
             <!-- /footer -->
-
+            <script type="text/javascript" src="js/getLatestNews.js"></script>
         </div>
     </body>
 </html>
