--- a/assets/www/newsdetail.html
+++ b/assets/www/newsdetail.html
@@ -12,7 +12,7 @@
 				<!--这里使用  data-rel="back" 因为可能是别的地方调用课程元素-->
 
 			</div><!-- /header -->
-
+            <script type="text/javascript" src="js/getNewsDetail.js"></script>
 			<div data-role="content"  data-theme="c">
 				<h3>“2011全国高校辅导员年度人物”评选结果出炉，我校周淑一老师获入围奖</h3>
 				<p>
