--- a/assets/www/networkError.html
+++ b/assets/www/networkError.html
@@ -11,11 +11,9 @@
 				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>网络出错</h1>
 		</div><!-- /header -->
 		<div data-role="content"  data-theme="c">
-			
+			<p>请打开您的网络</p>
 		</div>
 		
 	</div>
-	
-	
 </body>
 </html>
