--- a/assets/www/newscategory.html
+++ b/assets/www/newscategory.html
@@ -10,9 +10,9 @@
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>新闻</h1>
 			</div><!-- /header -->
-
+            <script type="text/javascript" src="js/getNewsCategory.js"></script>
 			<div data-role="content"  data-theme="c">
-				<ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+				<ul data-role="listview" id="categoryNews" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 					<li>
 						<a href="#">综合新闻</a>
 					</li>
@@ -24,15 +24,6 @@
 					</li>
 					<li>
 						<a href="#">校园人物</a>
-					</li>
-					<li>
-						<a href="#">媒体关注</a>
-					</li>
-					<li>
-						<a href="#">理论学习</a>
-					</li>
-					<li>
-						<a href="#">统战工作</a>
 					</li>
 				</ul>
 			</div><!-- /content -->
@@ -49,7 +40,7 @@
 					</ul>
 				</div><!-- /navbar -->
 			</div><!-- /footer -->
-
+            
 		</div>
 	</body>
 </html>
