album module start

--- a/assets/www/college.html
+++ b/assets/www/college.html
@@ -23,10 +23,10 @@
                 <div data-role="navbar">
                     <ul>
                         <li>
-                            <a onclick="chgContent('info')" class="ui-btn-active">所有课程</a>
+                            <a href="courselist.html" class="ui-btn-active">所有课程</a>
                         </li>
                         <li>
-                            <a onclick="chgContent('history')">我的课程</a>
+                            <a href="personalCourse.html">我的课程</a>
                         </li>
                         <li>
                             <a onclick="chgContent('colleges')">收藏</a>
