--- a/assets/www/courselist.html
+++ b/assets/www/courselist.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>courselist</title>
     </head>
     <body>
         <div data-role="page" id="courselist" data-title="courselist">
