--- a/assets/www/news.html
+++ b/assets/www/news.html
@@ -45,18 +45,6 @@
                         <a href="#">我校首次获得市级职工创新工作室称号</a>
                         <p> 2012/04/28 </p>
                     </li>
-                    <li>
-                        <a href="#">2012年田径运动会胜利闭幕</a>
-                        <p> 2012/04/28 </p>
-                    </li>
-                    <li>
-                        <a href="#">2012年田径运动会上的“最美”</a>
-                        <p> 2012/04/28 </p>
-                    </li>
-                    <li>
-                        <a href="#">2012年学校田径运动会开幕式亮点多</a>
-                        <p> 2012/04/28 </p>
-                    </li>
                 </ul>
             </div>
             <!-- /content -->
@@ -65,7 +53,7 @@
                 <div data-role="navbar">
                     <ul>
                         <li>
-                            <a href="news.html" class="ui-btn-active">最近新闻</a>
+                            <a href="#" class="ui-btn-active">最近新闻</a>
                         </li>
                         <li>
                             <a href="newscategory.html" >分类浏览</a>
