--- a/assets/www/newsList.html
+++ b/assets/www/newsList.html
@@ -18,11 +18,7 @@
             <div data-role="content"  data-theme="c">
                 <ul data-role="listview" id="newsListContent" class="ui-listview ui-shadow">
                     <li>
-                        <a href="newsdetail.html">***“2011全国高校辅导员年度人物”评选结果出炉，我校..</a>
-                        <p> 2012/04/28 </p>
-                    </li>
-                    <li>
-                        <a href="#">我校首次获得市级职工创新工作室称号</a>
+                        <a href="newsdetail.html"> </a>
                         <p> 2012/04/28 </p>
                     </li>
                 </ul>
