--- a/assets/www/newscategory.html
+++ b/assets/www/newscategory.html
@@ -35,7 +35,7 @@
 							<a href="news.html">最近新闻</a>
 						</li>
 						<li>
-							<a href="newscatgory.html" class="ui-btn-active">分类浏览</a>
+							<a href="#" class="ui-btn-active">分类浏览</a>
 						</li>
 					</ul>
 				</div><!-- /navbar -->
