--- a/assets/www/newsdetail.html
+++ b/assets/www/newsdetail.html
@@ -8,17 +8,16 @@
 		<div data-role="page" id="newsdetail" data-title="newsdetail">
 
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a data-rel="back" data-icon="arrow-l" data-mini="true">返回</a><h1>新闻</h1><a href="index.php" data-icon="home" data-mini="true">首页</a>
+				<a data-rel="back" data-icon="arrow-l" data-mini="true">返回</a><h1>新闻</h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
 				<!--这里使用  data-rel="back" 因为可能是别的地方调用课程元素-->
 
 			</div><!-- /header -->
             <script type="text/javascript" src="js/getNewsDetail.js"></script>
 			<div data-role="content"  data-theme="c">
-				<h3 id="newsDetail_header">“2011全国高校辅导员年度人物”评选结果出炉，我校周淑一老师获入围奖</h3>
+				<h3 id="newsDetail_header"> </h3>
 				<p>
-					供稿:学生处
+					
 				<p id="newsDetail_time">
-					2012年5月4日
 					<hr>
 				<p id="newsDetail_content">
 			
