--- a/assets/www/yellowpageDetail.html
+++ b/assets/www/yellowpageDetail.html
@@ -10,7 +10,7 @@
 				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>黄页</h1>
 			</div><!-- /header -->
 			
-			<script type="text/javascript" src=""></script>
+			<script type="text/javascript" src="js/getYellowpageList.js"></script>
 			<div data-role="content" id="yellowPageDetailContent" data-theme="c">
 				<ul data-role="listview" id="yellowPageDetailList" class="ui-listview ui-shadow">
 					
