finished favorite course and file store

--- a/assets/www/coursedetail.html
+++ b/assets/www/coursedetail.html
@@ -12,22 +12,22 @@
                 <h1>课程信息</h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
             </div>
 
-            <div data-role="content"  data-theme="c">
-                <h1 id="detail_courseName"></h1>
-                <p id="detail_courseInfo"></p>
-                <div>
-                    <span id="courseDetailPeriod">学时:100</span>&nbsp;&nbsp;&nbsp;&nbsp;<span id="courseDetailClassScore">学分:3</span>
-                </div>
-                <div>
-                    <span id="courseDetailClassType">课程类型:讲课和实验</span>
-                </div>
+            <div data-role="content" id="courseDetailContent" data-theme="c">
+            	<h1 id="detail_courseName"></h1>
+            	&nbsp;&nbsp;&nbsp;&nbsp;<p id="detail_courseInfo"></p>
+            	<div>
+            	    &nbsp;&nbsp;&nbsp;&nbsp;<span id="courseDetailPeriod">学时:100</span>&nbsp;&nbsp;&nbsp;&nbsp;<span id="courseDetailClassScore">学分:3</span>
+            	</div>
+            	<div>
+            	    &nbsp;&nbsp;&nbsp;&nbsp;<span id="courseDetailClassType">课程类型:讲课和实验</span>
+            	</div>
                 <div id="courseDetailListView">
                     <ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
                         <li>
                             <a href="#" id="courseDetailTeacher">教师:李宁</a>
                         </li>
                         <li>
-                            <a href="#" id="courseDetailClassroom">教室***:健翔桥校区第3阶梯教室</a>
+                            <a href="#" id="courseDetailClassroom">教室:健翔桥校区第3阶梯教室</a>
                         </li>
                         <li>
                             <a href="#" id="courseDetailTime">时间:周三下午1:00-3:00</a>
