--- a/assets/www/college.html
+++ b/assets/www/college.html
@@ -29,7 +29,7 @@
                             <a href="personalCourse.html">我的课程</a>
                         </li>
                         <li>
-                            <a onclick="chgContent('colleges')">收藏</a>
+                            <a href="favorCourseList.html">收藏</a>
                         </li>
                     </ul>
                 </div>
