--- a/assets/www/video.html
+++ b/assets/www/video.html
@@ -1,10 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<head>
-	<meta charset="UTF-8">
-	<title>Video</title>
-</head>
-<body>
-	
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>video</title>
+    </head>
+    <body>
+        <div data-role="page" data-title="video" id="videoPlay">
+            <div data-role="header" data-position="fixed" data-theme="b">
+                <a href="videoList.html" data-icon="arrow-l" data-mini="true">返回</a><h1 id="videoName"></h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
+            </div>
+            <div data-role="content" data-theme="c">
+                <video style="width:100%; height:100%;" src="http://v.youku.com/player/getM3U8/vid/XMzc2OTAwNjQ4/v.m3u8" controls autoplay></video>
+            </div>
+            
+        </div>
+    </body>
 </html>
