--- a/assets/www/college.html
+++ b/assets/www/college.html
@@ -2,10 +2,8 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>college</title>
         <meta name="viewport" content = "width = device-width, initial-scale = 1, minimum-scale = 1, maximum-scale = 1" />
-        
-        <link rel="stylesheet" href="style/index.css" />
     </head>
     <body>
         <div data-role="page" data-title="course" id="course">
@@ -17,7 +15,6 @@
             <div data-role="content">
                 <ul id='mainContent4course' data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
                 </ul>
-                <link rel="stylesheet" href="jquery.mobile-1.1.0.css" />
             </div>
             <div data-role="footer"  data-position="fixed">
                 <div data-role="navbar">
