--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/cordova-2.0.0.js"></script>
         <script type="text/javascript" src="js/base.js"></script> 
+        <script type="text/javascript" src="js/video/video.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.1.0.js"></script>
         
     </head>
@@ -43,7 +44,7 @@
                         </div>
                     </div>
                     <div class="ui-block-d">
-                        <a href="activity" id="index2activity"><img alt="活动" src="images/activities.png"/></a>
+                        <a href="activityList.html" id="index2activity"><img alt="活动" src="images/activities.png"/></a>
                         <div>
                             活动
                         </div>
