test video play
 test html5 video tag

--- a/assets/www/video.html
+++ b/assets/www/video.html
@@ -5,7 +5,7 @@
         <title>video</title>
 
     </head>
-    <body onload="onVideoBodyLoad()">
+    <body>
         <div data-role="page" data-title="video" id="videoPlay">
             <script type="text/javascript" src="js/video/getVideo.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
