--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>index</title>
-        <meta name="viewport" content = "width = device-width, initial-scale = 1, minimum-scale = 1, maximum-scale = 1" />
+        <meta name="viewport" content = "width = device-width, initial-scale = 1, user-scalable=no, minimum-scale = 1, maximum-scale = 1" />
         <link rel="stylesheet" href="jquery.mobile-1.1.0.css" />
         <link rel="stylesheet" href="style/index.css" />
         
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="js/cordova-1.9.0.js"></script>
         <script type="text/javascript" src="js/base.js"></script> 
         <script type="text/javascript" src="js/jquery.mobile-1.1.0.js"></script>
-        
+        <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
     </head>
     <body>
 
