--- a/assets/www/map.html
+++ b/assets/www/map.html
@@ -1,38 +1,37 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-    </head>
-    <body>
-        <div data-role="page" id="map" data-title="map">
-            <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
-            
-            <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>地图</h1>
-            </div>
-            <!-- /header -->
+	<head>
+		<meta charset="UTF-8">
+		<title></title>
+	</head>
+	<body>
+		<div data-role="page" id="map" data-title="map">
 
-            <div data-role="content" data-theme="c" id="mapContainer" style="width:520px;height:340px;border:1px solid gray">
+			<div data-role="header" data-position="fixed" data-theme="b">
+				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>地图</h1>
+			</div>
+			<!-- /header -->
+			<script type="text/javascript" src="js/getMap.js"></script>
+			<div data-role="content" data-theme="c"  id="mapContainer" style="width: 520px; height: 640px; border:1px solid gray">
+				<div class="hidden" style="width: 520px; height: 600px;"></div>
+			</div>
+			<div data-role="footer" data-position="fixed" data-theme="c">
+				<div data-role="navbar">
+					<ul>
+						<li>
+							<a onclick="moveMap('xy')" class="ui-btn-active">小营</a>
+						</li>
+						<li>
+							<a onclick="moveMap('jxq')">健翔桥</a>
+						</li>
+						<li>
+							<a onclick="moveMap('qh')">清河</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 
-            </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
-                <div data-role="navbar">
-                    <ul>
-                        <li>
-                            <a onclick="moveMap('xy')" class="ui-btn-active">小营</a>
-                        </li>
-                        <li>
-                            <a onclick="moveMap('jxq')">健翔桥</a>
-                        </li>
-                        <li>
-                            <a onclick="moveMap('qh')">清河</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+		</div>
 
-        </div>
-        <script type="text/javascript" src="js/getMap.js"></script>
-    </body>
+	</body>
 </html>
