ready to ios video
 ios & android video play

--- a/assets/www/album.html
+++ b/assets/www/album.html
@@ -11,7 +11,7 @@
         </div>
         <script type="text/javascript" src="js/getAlbum.js"></script>
         <div data-role="content" data-theme="c">
-            <div class="ui-grid-c">
+            <!-- <div class="ui-grid-c">
             	<div class="ui-block-a overflow"><img style="width:100%; height:90%;" src="img/11.png" alt="img" /><br /><p>A</p></div>
             	<div class="ui-block-b overflow"><img style="width:100%; height:90%;" src="img/11.png" alt="img" /><br /><p>B</p></div>
             	<div class="ui-block-c overflow"><img style="width:100%; height:90%;" src="img/11.png" alt="img" /><br /><p>C</p></div>
@@ -20,7 +20,43 @@
             	<div class="ui-block-b overflow"><img style="width:100%; height:90%;" src="img/11.png" alt="img" /><br /><p>F</p></div>
             	<div class="ui-block-c overflow"><img style="width:100%; height:90%;" src="img/11.png" alt="img" /><br /><p>G</p></div>
             	<div class="ui-block-d overflow"><img style="width:100%; height:90%;" src="img/11.png" alt="img" /><br /><p>H</p></div>
-            </div>
+            </div> -->
+            
+            <ul class="ui-grid-c">
+            	<li class="ui-block-a overflow">
+            		<img src="img/11.png" alt="" />
+            		<p>A</p>
+            	</li>
+            	<li class="ui-block-a overflow">
+            		<img src="img/11.png" alt="" />
+            		<p>A</p>
+            	</li>
+            	<li class="ui-block-a overflow">
+            		<img src="img/11.png" alt="" />
+            		<p>A</p>
+            	</li>
+            	<li class="ui-block-a overflow">
+            		<img src="img/11.png" alt="" />
+            		<p>A</p>
+            	</li>
+            	<li class="ui-block-a overflow">
+            		<img src="img/11.png" alt="" />
+            		<p>A</p>
+            	</li>
+            	<li class="ui-block-a overflow">
+            		<img src="img/11.png" alt="" />
+            		<p>A</p>
+            	</li>
+            	<li class="ui-block-a overflow">
+            		<img src="img/11.png" alt="" />
+            		<p>A</p>
+            	</li>
+            	<li class="ui-block-a overflow">
+            		<img src="img/11.png" alt="" />
+            		<p>A</p>
+            	</li>
+            </ul>
+            
         </div>
 	</div>    
 </body>
