--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="ui-block-d">
-                        <a href="album.html" id="index2album"><img src="images/photo.png"></a>
+                        <a href="albumlist.html" id="index2album"><img src="images/photo.png"></a>
                         <div>
                             相册
                         </div>
