--- a/assets/www/video.html
+++ b/assets/www/video.html
@@ -16,7 +16,7 @@
                 <!-- <video style="width:100%; height:100%;"
                 src="http://v.youku.com/player/getM3U8/vid/XMzc2OTAwNjQ4/v.m3u8"
                 controls autoplay></video> -->
-                <a href="#" onclick="playVideoNow('file:///android_asset/www/tmp/test.mp4');">Play Video now!</a>
+                <a href="#" onclick="playVideoNow('http://118.228.16.44/youku/6754C2FAC3B834F5EEAD4FC2/0300200100501232214EE707540B3195B66524-F46C-C889-00B5-A0A096FF369E.mp4');">Play Video now!</a>
                 <a href="#" onclick="playVideoNow('http://v.youku.com/player/getM3U8/vid/XMzc2OTAwNjQ4/v.m3u8');">Youku video</a>
 
 
